--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <li>Quos, rerum.</li>
       <li>Nisi, impedit.</li>
     </ul>
-    <video src="아아아암.mp4" loop autoplay muted></video>
+    <video src="아아아암.mp4" type="video/mp4" autoplay loop muted playsinline></video>
   </body>
 </html>
